--- a/angular.json
+++ b/angular.json
@@ -1,11 +1,17 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "0d60eb92-4833-4983-86d8-565cfd04d092"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "trello-FrontEnd": {
+    "CaseStudyModule6": {
       "projectType": "application",
       "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        },
         "@schematics/angular:application": {
           "strict": true
         }
@@ -17,17 +23,18 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/trello-FrontEnd",
+            "outputPath": "dist/CaseStudyModule6",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -68,10 +75,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "trello-FrontEnd:build:production"
+              "browserTarget": "CaseStudyModule6:build:production"
             },
             "development": {
-              "browserTarget": "trello-FrontEnd:build:development"
+              "browserTarget": "CaseStudyModule6:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -79,7 +86,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "trello-FrontEnd:build"
+            "browserTarget": "CaseStudyModule6:build"
           }
         },
         "test": {
@@ -89,12 +96,13 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
+            "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
@@ -102,5 +110,5 @@
       }
     }
   },
-  "defaultProject": "trello-FrontEnd"
+  "defaultProject": "CaseStudyModule6"
 }
