--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "bootstrap": "^5.1.1",
+    "bulma": "^0.9.3",
+    "bulma-toast": "^2.4.1",
     "rxjs": "~6.6.0",
     "s": "^1.0.0",
     "tslib": "^2.3.0",
