--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
-<<<<<<< HEAD
     "@angular/cdk": "^12.2.8",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
@@ -23,18 +22,10 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "bootstrap": "^5.1.1",
+    "bulma": "^0.9.3",
+    "bulma-toast": "^2.4.1",
     "rxjs": "~6.6.0",
     "s": "^1.0.0",
-=======
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "rxjs": "~6.6.0",
->>>>>>> d7250c9 (initial commit)
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
