--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
+    "@angular/fire": "^7.0.4",
     "@angular/flex-layout": "^12.0.0-beta.35",
     "@angular/forms": "~12.2.0",
     "@angular/material": "^12.2.8",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angularfire2": "^5.4.2",
     "bootstrap": "^5.1.1",
     "bulma": "^0.9.3",
     "bulma-toast": "^2.4.1",
+    "firebase": "^9.1.1",
     "rxjs": "~6.6.0",
     "s": "^1.0.0",
     "tslib": "^2.3.0",
