--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "angularfire2": "^5.4.2",
     "bootstrap": "^5.1.1",
     "bulma": "^0.9.3",
     "bulma-toast": "^2.4.1",
@@ -30,6 +29,8 @@
     "rxjs": "~6.6.0",
     "s": "^1.0.0",
     "tslib": "^2.3.0",
+    "@types/jquery": "^3.5.6",
+    "jquery": "^3.6.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
