--- a/package.json
+++ b/package.json
@@ -22,21 +22,22 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@types/jquery": "^3.5.6",
     "bootstrap": "^5.1.1",
     "bulma": "^0.9.3",
     "bulma-toast": "^2.4.1",
     "firebase": "^9.1.1",
+    "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "s": "^1.0.0",
     "tslib": "^2.3.0",
-    "@types/jquery": "^3.5.6",
-    "jquery": "^3.6.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.6",
     "@angular/cli": "~12.2.6",
     "@angular/compiler-cli": "~12.2.0",
+    "@creativebulma/bulma-collapsible": "^1.0.4",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
