--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bulma-toast": "^2.4.1",
     "firebase": "^9.1.1",
     "jquery": "^3.6.0",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
     "s": "^1.0.0",
     "tslib": "^2.3.0",
