--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@stomp/stompjs": "^6.1.2",
     "@types/jquery": "^3.5.6",
     "bootstrap": "^5.1.1",
     "bulma": "^0.9.3",
     "bulma-toast": "^2.4.1",
     "firebase": "^9.1.1",
     "jquery": "^3.6.0",
+    "net": "^1.0.2",
     "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
     "s": "^1.0.0",
+    "sockjs-client": "^1.5.2",
+    "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -40,7 +44,8 @@
     "@angular/compiler-cli": "~12.2.0",
     "@creativebulma/bulma-collapsible": "^1.0.4",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.33",
+    "@types/sockjs-client": "^1.5.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
